<resources>
    <string name="app_name">Fono</string>
    <string name="wallpapers">Wallpapers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_columns">Columns</string>
    <string name="action_details">Details</string>
    <string name="title_activity_help">Help</string>

    <string name="image">Image</string>

    <string name="categories">Categories</string>
    <string name="category_abstract">Abstract</string>

    <string name="fono_info">About</string>
    <string name="version">Version</string>
    <string name="versionN">1.0.0</string>
    <string name="general">General</string>
    <string name="social_media">Social Media</string>
    <string name="twitter">Follow me on Twitter</string>
    <string name="github">Follow me on GitHub</string>

</resources>